--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,7 @@
-#Fri Apr 11 19:33:59 BRT 2025
+# Mon Jun 09 05:20:00 BRT 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
+# CORREÇÃO: Alterado de "8.11.1" para a versão estável "8.6"
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.11.1-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
