--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.myapplication">
+    xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Permissões necessárias -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
-
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-feature android:name="android.hardware.camera" android:required="false" />
-
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <!-- Recursos da câmera (não obrigatória) -->
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
 
     <application
         android:allowBackup="true"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.MyApplication"
+        tools:targetApi="31">
+
+        <!-- Atividade inicial -->
         <activity
             android:name=".LoadingLoginActivity"
             android:exported="true"
@@ -28,75 +36,41 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".MainActivity"
-            android:exported="false">
-        </activity>
-
+        <!-- Outras atividades -->
+        <activity android:name=".MainActivity" android:exported="false" />
         <activity
             android:name=".SecondScreenActivity"
             android:exported="false"
             android:theme="@style/Theme.SecondScreen" />
-        <activity
-            android:name=".GaleriaFotosActivity"
-            android:exported="false" />
-        <activity
-            android:name=".CriarNovoClienteActivity"
-            android:exported="false" />
+        <activity android:name=".GaleriaFotosActivity" android:exported="false" />
+        <activity android:name=".CriarNovoClienteActivity" android:exported="false" />
         <activity
             android:name=".AdicionarClienteActivity"
             android:exported="false"
             android:theme="@style/Theme.AdicionarCliente" />
-        <activity
-            android:name=".ListarClientesActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ListarArtigosActivity"
-            android:exported="false" />
-        <activity
-            android:name=".LixeiraActivity"
-            android:exported="false" />
+        <activity android:name=".ListarClientesActivity" android:exported="false" />
+        <activity android:name=".ListarArtigosActivity" android:exported="false" />
+        <activity android:name=".LixeiraActivity" android:exported="false" />
         <activity
             android:name=".ArquivosRecentesActivity"
             android:exported="false"
             android:theme="@style/Theme.ArquivosRecentes" />
-        <activity
-            android:name=".CriarNovoArtigoActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ThirdScreenActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ClienteActivity"
-            android:exported="false" />
-        <activity
-            android:name=".DefinicoesActivity"
-            android:exported="false" />
-        <activity
-            android:name=".LogotipoActivity"
-            android:exported="false" />
-        <activity
-            android:name=".InformacoesEmpresaActivity"
-            android:exported="false" />
-        <activity
-            android:name=".NotasActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ClientesBloqueadosActivity"
-            android:exported="false" />
-        <activity
-            android:name=".InstrucoesPagamentoActivity"
-            android:exported="false" />
-
+        <activity android:name=".CriarNovoArtigoActivity" android:exported="false" />
+        <activity android:name=".ThirdScreenActivity" android:exported="false" />
+        <activity android:name=".ClienteActivity" android:exported="false" />
+        <activity android:name=".DefinicoesActivity" android:exported="false" />
+        <activity android:name=".LogotipoActivity" android:exported="false" />
+        <activity android:name=".InformacoesEmpresaActivity" android:exported="false" />
+        <activity android:name=".NotasActivity" android:exported="false" />
+        <activity android:name=".ClientesBloqueadosActivity" android:exported="false" />
+        <activity android:name=".InstrucoesPagamentoActivity" android:exported="false" />
         <activity
             android:name=".ResumoFinanceiroActivity"
             android:exported="false"
             android:theme="@style/Theme.ResumoFinanceiro" />
-        <activity
-            android:name=".DetalhesFaturasMesActivity"
-            android:exported="false" />
+        <activity android:name=".DetalhesFaturasMesActivity" android:exported="false" />
 
-
+        <!-- Provedor de arquivos -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.fileprovider"
@@ -106,5 +80,7 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
+
     </application>
+
 </manifest>
